--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -11,9 +11,9 @@
 @lgFontSize:      1.6em;
 @lgHeadlineSize:  1.30em;
 @lgsubheadSize:   1.20em;
-@smallerText:     0.85em;
+@smallerText:     0.90em;
 @btnSize:         1em;
-@legendSize:      0.90em;
+@legendSize:      0.95em;
 @sessionListSize: 0.95em;
 @orgSize:         0.99em;
 
@@ -65,6 +65,9 @@ body {
   height: 71px;
 }
 
+a.btn {
+  font-size: @baseFontSize;
+}
 #tnthNavWrapper {
   display: none;
   visibility: hidden;
@@ -82,6 +85,7 @@ body {
   font-size: 0.90em;
 }
 
+
 #indexContainer {
 display: block;
 padding: 1.8em 2em;
@@ -90,7 +94,7 @@ position: absolute;
 transform(-1000px, 0);*/
 display: none;
 -webkit-transform: translate(0, -200px);
-transform: (0, -200px);
+transform: translate(0, -200px);
 transition: all 0.5s ease;
 z-index:9;
 width:25%;
@@ -103,11 +107,12 @@ font-size: 0.85em;
 -webkit-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
 -moz-box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
 box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
-  .open {
+}
+
+#indexContainer.open {
   -webkit-transform: translate(0, 0);
   transform: translate(0, 0);
   display: block;
-  }
 }
 
 
@@ -129,7 +134,7 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
   span.glyphicon {
     cursor: pointer;
     font-size: 1em;
-    padding: 0.3em;
+    padding: 0.3em 0.8em;
     -webkit-box-shadow: 1px 1px 1px 0px #777;
     -moz-box-shadow: 1px 1px 1px 0px #777;
     box-shadow: 1px 1px 1px 0px #777;
@@ -137,8 +142,8 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
     border-top: 1px solid #ddd;
     border-radius: 2px;
     position: relative;
-    top: 3px;
-    margin-left: -8px;
+    top: 2px;
+    margin-left: -4px;
   }
 
   span.link {
@@ -148,13 +153,15 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
     border-radius: 4px;
     color: #53583f;
     font-size:0.90em;
-    font-weight: 450;
+    font-weight: 500;
     -webkit-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.85);
     -moz-box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.85);
     box-shadow: 1px 1px 1px -1px rgba(0,0,0,0.85);
     cursor:pointer;
     background-color: #FFF;
-    background: linear-gradient(to top, rgba(159, 165, 167, 0.20), #FFF, #FFF);
+    /*
+    background: linear-gradient(to top, rgba(159, 165, 167, 0.05), rgba(159, 165, 167, 0.01));
+    */
     max-width: 100%;
   }
 
@@ -164,11 +171,11 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
 
   #backLink {
    position: relative;
-   top: -4px;
+   top: -3.5px;
    display: inline-block;
    a {
     position: relative;
-    top: 1px;
+    top: 0.8px;
     }
   }
 
@@ -223,7 +230,7 @@ a.btn {
   font-size: @smallerText * 1.2;
 }
 .loading {
-  .opacity(0.3);
+  opacity: 0.3;
 }
 
 .admin-table {
@@ -499,7 +506,7 @@ btn {
 }
 
 .tnth-form .form-group > label {
-  font-size: 18px;
+  font-size: 1em;
   color: #777;
 }
 
@@ -585,14 +592,12 @@ btn {
 
 #userOrgs {
  font-size:@orgSize;
- label :first-of-type  {
-    margin-bottom: 0.5em;
- }
 }
 
 #fillOrgs legend {
   font-size:@legendSize;
   color: @legendColor;
+  margin-bottom: 0;
 }
 
 #fillOrgs, .noOrg-container{
@@ -931,7 +936,7 @@ t
 }*********/
 
 .side {
-  height:34em
+  height:26em
 }
 .flex {
   display: flex;
@@ -988,7 +993,7 @@ t
 
 /**override bootstrap style**/
 .checkbox input[type=checkbox], .checkbox-inline input[type=checkbox], .radio input[type=radio], .radio-inline input[type=radio] {
-  margin-top:6px;
+  /*margin-top:6px;*/
 }
 
 div.modal-header, div.modal-footer {
@@ -1197,7 +1202,7 @@ div.input-group.date {
   }
 
   .side {
-    height: 34em;
+    height: 38em;
   }
   #phone, #email {
     width: 100%;
@@ -1312,6 +1317,20 @@ div.input-group.date {
   .form-control {
     margin-bottom: 4px;
   }
+
+  #profileForm #bdGroup div.row {
+    height: 10em;
+  }
+  #profileForm div.name-section {
+    height: 10em;
+  } 
+  .side {
+    height: 34em;
+  }
+  .load-container {
+    min-height: 1.5em;
+  }
+
 }
 @media (min-width: 992px) {
 
@@ -1355,14 +1374,15 @@ div.input-group.date {
     }
   }
 
-  .form-group input[type=checkbox], .form-group  input[type=radio] {
-    margin-top: 9px;
+  .form-group input[type=checkbox] {
+    position: relative;
+    margin-right: 3px;
   }
 
   /** Unless explicitly wrapped in reduce-font-sizes class **/
   .reduce-font-sizes {
     body & {
-      font-size: @baseFontSize;
+      font-size: 1.1em;
     }
     .tnth-headline {
       font-size: @headlineSize;
