removing consent from UI - and updating it implicitly via ajax

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1396,8 +1396,12 @@ div.input-group.date {
     }
   }
 
-  .form-group input[type=checkbox], .form-group  input[type=radio] {
+  .form-group input[type=checkbox] {
     margin-top: 5px;
+  }
+
+  .form-group input[type=radio] {
+    margin-top: 4px;
   }
 
   /** Unless explicitly wrapped in reduce-font-sizes class **/
