--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1252,9 +1252,11 @@ div.input-group.date {
   .pos-bottom-md .btn {
     margin: 0 0 15px 15px;
   }
-  .form-group input[type=checkbox],
-  .form-group input[type=radio] {
+  .form-group input[type=checkbox] {
     margin-top: 5px;
+  }
+  .form-group input[type=radio] {
+    margin-top: 4px;
   }
   /** Unless explicitly wrapped in reduce-font-sizes class **/
   body .reduce-font-sizes {
