--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -801,16 +801,15 @@
             <div class="row">
                 <div class="col-md-12 col-xs-12">
                     <div class="profile-item-container">
-                         <h4 id="patientInformationLoc" class="profile-item-title">{% if person.has_role('patient') %}Patient{%else%}User{%endif%} Information</h4>
-                         <br/>
+                         <h4 id="patientInformationLoc" class="profile-item-title">Patient Information</h4>
                          <div class="row">
-                            <div class="col-md-9 col-xs-11">
+                            <div class="col-md-push-1 col-md-9 col-xs-11">
                                 {{profileName(person)}}
                                 {{profileBirthDate(person)}}
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-xs-11">
+                            <div class="col-md-push-1 col-md-6 col-xs-11">
                                 {{profileEmail(person)}}
                             </div>
                         </div>
@@ -821,7 +820,7 @@
             <div class="row">
                 <div class="col-md-7 col-xs-12">
                     <div class="profile-item-container side">
-                         <h4 id="patientInformationLoc" class="profile-item-title">{% if person.has_role('patient') %}Patient{%else%}User{%endif%} Information</h4>
+                         <h4 id="patientInformationLoc" class="profile-item-title">User Information</h4>
                          <br/>
                          <div class="row">
                             <div class="col-md-11 col-xs-11">
@@ -936,34 +935,39 @@
 {% macro profileProcedures(person, current_user) -%}
 <script src="{{ url_for('static', filename='js/procedures.js') }}"></script>
 <style>
-    .treatment-container {margin-left:1em;}
+    .treatment-container {margin-left:0.5em;}
 </style>
 <p>Which of the following prostate cancer treatments {%if current_user.has_role('provider') and current_user.id != person.id %}has the patient{%else%}have you{%endif%} had, if any? If you don&#39;t remember the exact
     date, please make your best guess.<span class="text-muted smaller-text"></span></p>
 <div id="profileProcedureContainer" style="margin-left: 1em">
-    <div style="margin: 1em 0">
+    <div style="margin: 1em 0 1em 1em">
         <p class="text-muted">{%if current_user.id == person.id%}Your treatments{%else%}Treatments{%endif%}:</p>
         <div id="userProcedures"></div>
 
     </div>
     <br/>
-    <form class="form-inline event-element to-validate" style='margin-left: 1em;' data-toggle="validator">
+    <form class="form-inline event-element to-validate" style='margin-left: 0.5em;' data-toggle="validator">
 
             <p class="text-muted">Add a treatment:</p>
-            <div class='form-group'>
-                <select class='form-control' id='tnthproc'>
-                    <option value=''>Select treatment...</option>
-                    <option value='373818007'>Started watchful waiting</option>
-                    <option value='424313000'>Started active surveillance</option>
-                    <option value='26294005'>Radical prostatectomy (nerve-sparing)</option>
-                    <option value='26294005-nns'>Radical prostatectomy (non-nerve-sparing)</option>
-                    <option value='33195004'>External beam radiation therapy</option>
-                    <option value='228748004'>Brachytherapy</option>
-                    <option value='707266006'>Androgen deprivation therapy</option>
-                    <option value='999999999'>None of the above</option>
-                </select>
-                <div class="help-block with-errors"></div>
+            <div class="row">
+                <div class="col-md-6 col-xs-11">
+                    <div class='form-group'>
+                        <select class='form-control' id='tnthproc'>
+                            <option value=''>Select treatment...</option>
+                            <option value='373818007'>Started watchful waiting</option>
+                            <option value='424313000'>Started active surveillance</option>
+                            <option value='26294005'>Radical prostatectomy (nerve-sparing)</option>
+                            <option value='26294005-nns'>Radical prostatectomy (non-nerve-sparing)</option>
+                            <option value='33195004'>External beam radiation therapy</option>
+                            <option value='228748004'>Brachytherapy</option>
+                            <option value='707266006'>Androgen deprivation therapy</option>
+                            <option value='999999999'>None of the above</option>
+                        </select>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
             </div>
+            
             <!--
             <div class='form-group'>
                 <label>Date:</label>
@@ -984,7 +988,7 @@
                         <input class="form-control" id="procDay" name="procDay"  type="text" placeholder="DD" patterntype="text" maxlength="2" data-birthday="true" required="" pattern="(0[1-9]|[12][0-9]|3[01])">
                     </div>
                     <div>
-                        <select class="form-control" name="procMonth" style="width:100%" id="procMonth" data-birthday="true" required="">
+                        <select class="form-control" name="procMonth" id="procMonth" data-birthday="true" required="">
                             <option value="">Month...</option>
                             <option value="01">January</option>
                             <option value="02">February</option>
@@ -1014,6 +1018,7 @@
             <i class='fa fa-plus'></i> Add Procedure
         </button>
     </form>
+    <br/>
 <div>
 <script>
     var subjectId = {{ person.id }};
