--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -134,15 +134,15 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
   span.glyphicon {
     cursor: pointer;
     font-size: 1em;
-    padding: 0.3em 0.8em;
+    padding: 0.5em 0.8em;
     -webkit-box-shadow: 1px 1px 1px 0px #777;
     -moz-box-shadow: 1px 1px 1px 0px #777;
     box-shadow: 1px 1px 1px 0px #777;
     border-left: 1px solid #ddd;
     border-top: 1px solid #ddd;
-    border-radius: 2px;
-    position: relative;
-    top: 2px;
+    border-radius: 4px;
+    /*position: relative;
+    top: 2px;*/
     margin-left: -4px;
   }
 
@@ -164,7 +164,7 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
     color: @linkColor;
     font-size: 0.90em;
     padding: 0.5em 1em;
-    border: solid #eee 2px;
+    border: solid #ccc 1px;
     text-decoration: none;
   }
 
@@ -180,6 +180,11 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
     position: relative;
     top: 0.8px;
     }
+  }
+
+  .link-xs {
+    margin-left: 8px;
+    display: none;
   }
 
 }
@@ -550,7 +555,7 @@ btn {
 .profile-item-container {
   background-color: #EFF5F3;
   /*background-color: rgba(173, 193, 197, 0.16);*/
-  background-color: rgba(204, 204, 204, 0.3);
+  background-color: rgba(204, 206, 204, 0.2);
   padding: 1.5em 2.2em 2em 2.2em;
   border-radius: 8px;
   margin: 0.5em auto;
@@ -759,7 +764,7 @@ t
 }
 
 .profile-header {
-  width:45%;
+  width: 100%;
   max-width: 100%;
 }
 .profile-section {
@@ -1182,12 +1187,13 @@ div.input-group.date {
 
   #indexNavBar {
     max-width: 100%;
-      span.link {
-      font-size: 0.85em;
+    .link-xs {
       display: inline-block;
-      width: 98%;
-      max-width: 100%;
-      margin: 0.5em auto;
+      font-size: 1em;
+      margin-top: -1px;
+    }
+    span.link {
+      display: none;
     }
     span.glyphicon {
       margin-left: -2px;
@@ -1196,7 +1202,7 @@ div.input-group.date {
       top: -0.1px;
     }
   }
- 
+
   #wellContainer .tnth-well {
     height: 60%;
   }
@@ -1276,7 +1282,7 @@ div.input-group.date {
   }
   #profileForm div.name-section {
     height: 10em;
-  } 
+  }
 
 }
 
@@ -1338,7 +1344,7 @@ div.input-group.date {
   }
   #profileForm div.name-section {
     height: 10em;
-  } 
+  }
   .side {
     height: 34em;
   }
@@ -1452,7 +1458,7 @@ div.input-group.date {
   }
   #profileForm div.name-section {
     height: 4em;
-  } 
+  }
 }
 
 @media (min-width: 1400px) {
