--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -775,6 +775,23 @@
     </script>
 {%- endmacro %}
 
+{% macro profileInterventionReports(person) -%}
+    <div class="row">
+            <div class="col-md-12 col-xs-12">
+                <div class="profile-item-container">
+                    <h4 id="interventionReportsLoc" class="profile-item-title">Intervention Reports</h4>
+                    <div>
+                        {% if person.provider_html() %}
+                            {{person.provider_html()}}
+                        {% else %}
+                            <div class="text-mute">No Reports Available</div>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+    </div>
+{%- endmacro %}
+
 {% macro profile(person, current_user, consent_agreements) -%}
 
     {% if person and person.has_role('patient') and current_user.has_role('provider') and (current_user.id != person.id) %}
@@ -876,6 +893,10 @@
         </div>
     {% endif %}
 
+    {% if person.has_role('patient') %}
+        {{profileInterventionReports(person) | show_macro('intervention_reports')}}
+    {% endif %}
+
     <div class="row">
         <div class="col-md-12 col-xs-12">
             <div class="profile-item-container">
@@ -936,17 +957,23 @@
 <script src="{{ url_for('static', filename='js/procedures.js') }}"></script>
 <style>
     .treatment-container {margin-left:0.5em;}
+    #eventListtnthproc {margin-left: 0.5em}
+    #eventListtnthproc td { padding: 0.15em;}
+    #profileProcedureContainer { margin-left: 1em;}
+    #profileProcedureContainer .inner {margin: 1em 0.5em 1em 0.5em}
+    #procedureForm { margin-left: 0.5em;}
+    .procedureDateLabel { margin-bottom: 0;}
 </style>
 <p>Which of the following prostate cancer treatments {%if current_user.has_role('provider') and current_user.id != person.id %}has the patient{%else%}have you{%endif%} had, if any? If you don&#39;t remember the exact
     date, please make your best guess.<span class="text-muted smaller-text"></span></p>
-<div id="profileProcedureContainer" style="margin-left: 1em">
-    <div style="margin: 1em 0.5em 1em 0.5em">
+<div id="profileProcedureContainer">
+    <div class="inner">
         <p class="text-muted">{%if current_user.id == person.id%}Your treatments{%else%}Treatments{%endif%}:</p>
         <div id="userProcedures"></div>
 
     </div>
     <br/>
-    <form class="form-inline event-element to-validate" style='margin-left: 0.5em;' data-toggle="validator">
+    <form id="procedureForm" class="form-inline event-element to-validate" data-toggle="validator">
 
             <p class="text-muted">Add a treatment:</p>
             <div class="row">
@@ -967,7 +994,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <!--
             <div class='form-group'>
                 <label>Date:</label>
@@ -982,7 +1009,7 @@
             -->
             <br/>
             <div class="form-group">
-                <label style="margin-bottom:0">Date:</label>
+                <label class="procedureDateLabel">Date:</label>
                 <div class="flex">
                     <div>
                         <input class="form-control" id="procDay" name="procDay"  type="text" placeholder="DD" patterntype="text" maxlength="2" data-birthday="true" required="" pattern="(0[1-9]|[12][0-9]|3[01])">
