Register flow now passed through /go as per issue [134322751](https://www.pivotaltracker.com/n/projects/1225464/stories/134322751}

--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -21,7 +21,7 @@
                         <div style="margin-bottom: 1em">{{ app_text('landing title') }}</div>
                         {{ app_text('landing sub-title') }}
                     </div>
-                    <a href="/user/register" class="btn feature-btn feature-btn-primary">Register</a> &nbsp;&nbsp; <a href="/user/sign-in" class="btn feature-btn feature-btn-primary">Login</a>
+                    <a href="/go" class="btn feature-btn feature-btn-primary">Register</a> &nbsp;&nbsp; <a href="/user/sign-in" class="btn feature-btn feature-btn-primary">Login</a>
 
                 </div>
                 <div class="tnth-splash-bottom">
