--- a/portal/templates/shortcut_alias.html
+++ b/portal/templates/shortcut_alias.html
@@ -71,7 +71,7 @@
             <section id="noContainer">
                     <p class="profile-item-title">I do not have access code</p>
                     <p>Continue registration without an access code</p>
-                   <a href="/" role="button" class="access-button">Register</a>
+                   <a href="/user/register" role="button" class="access-button">Register</a>
             </section>
           {{ form.csrf_token }}
         </form>
